--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koapp-module-grouplist",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Modulo de Group List",
   "directories": {
     "test": "test"
@@ -31,7 +31,7 @@
     "jsesc": "^2.2.0",
     "protractor": "^2.0.0"
   },
-  "author": "King of App",
+  "author": "Koapp <koappnpmpublisher@gmail.com> (http://www.kingofapp.com)",
   "license": "MIT",
   "keywords": [
     "koapp",
