Revert "added container capabilities"
This reverts commit d5bf71f00c8cd55f86582612d16a4dd48690d4f8.

--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     },
     "icon": "list",
     "type": "A",
-    "canContain": true,
+    "canContain": false,
     "version": "1.0.10",
     "author": "King of App",
     "category": [
